# DaD

./: DaD.sln  Practicum_2.1_Opdrachten.ipynb  Script.ipynb  pyproject.toml
Pactricum_2.3_Opdrachten/: Practicum_2.3_Opdrachten.ipynb
Practicum_10.1_Opdrachten/MyNeuralNetworkProject/: Program.cs
Practicum_11/: Practicum_11.3.ipynb
Practicum_2.2_Opdrachten/: Practicum_2.2_Opdrachten.ipynb
Practicum_2.3_Opdracht/: Practicum_2.3_Opdrachten.ipynb
Practicum_3.1_Opdrachten/: Practicum_3.1_Opdrachten.ipynb  Practicum_3.2_Opdracht.ipynb
Practicum_5.1_Opdracht/: DPracticum_5.1_Opdracht.ipynb  Practicum_5.1_Opdracht.ipynb  Tpracticum_5.1_Opdracht.ipynb
Practicum_8.1/: Class_model.ipynb  Reg_model.ipynb
Practicum_9.3/: Pract_9.ipynb  Practicum_9.2.ipynb  Script_W9_1.ipynb
Project/Src/: 2.2_Opdracht.py  2.3_Opdracht.py  3.1_Opdracht.py  3.2_Opdracht.py  5.1_Opdrachten.py  Main.py  Script.py  Settings.py
